--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean package
-        working-directory: newjavapackage
+        working-directory: javapack
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -31,8 +31,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: newjavapackage
-          file: newjavapackage/Dockerfile
+          context: javapack
+          file: javapack/Dockerfile
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/javemayexample:${{ github.run_number }}
